changed about section

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<a id="back-button" href="index.html" data-aos="zoom-in"><img src="assets/images/back-icon.png"/></a>
 	<div id="about" data-aos="zoom-in">
 		<p>
-			My name is Naveen Minhas. I did my graduation from Chandigarh University in Computer Science and Engineering. Currently I am freelancing at Chegg as a QA Expert. I like programming puzzles, web design, making something from scratch, Computer Science theory and many more things. Things i love to do in free time are playing sports, climbing mountains, swimming, working on a project, social work etc. Yoga, programming, learning a skill, these are the important things which are part of my daily routine.
+			My name is Naveen Minhas. I did my graduation from Chandigarh University in Computer Science and Engineering. I do freelancing at Chegg as a QA Expert. I like programming puzzles, web development, making something from scratch, Computer Systems and excited about new technologies. Things i love to do in free time are playing sports, climbing mountains, swimming, working on a project, social work etc. Yoga, programming, learning a skill, these are the important things which are part of my daily routine.
 		</p>
 	</div>
 
