--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 		<nav>
-			<div class="nav-item one"> <a href="assets/naveenResume.pdf">RESUME</a></div>
+			<div class="nav-item one"> <a href="https://docs.google.com/document/d/1ZDIlaxdwpK9FOg0DmDtO1G3cEmzn8RIpxo4JRdVyzxs/edit?usp=sharing">RESUME</a></div>
 			<div class="nav-item two"> <a href="projects.html">PROJECTS</a></div>
 			<div class="nav-item three"> <a href="about.html">ABOUT</a></div>
 		</nav>
